--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <!-- Header/Navbar -->
-        <header class="header">
+        <header class="header" id="header">
             <h2 class="title"><i class="fa-solid fa-laptop-code"></i>My Portfolio</h2>
             <nav class="navbar">
                 <ul>
@@ -49,7 +49,7 @@
                     <div class="github-1">
                         <a href="https://github.com/TooSparky/first-challenge" target="_blank">
                             <img src="./images/opera-snapshot-main-page.png" alt="first challenge screenshot"
-                             class="snapshot">First Challenge Project</a>
+                             class="snapshot">First Challenge</a>
                     </div>
                     <div class="github-2">
                         <a href="https://github.com/TooSparky/prework-study-guide" target="_blank">
@@ -87,7 +87,7 @@
         </section>
 
         <!-- Footer Section -->
-        <footer>
+        <footer id="footer">
             <h3>Made by Zach Barnes 2023.</h3>
         </footer>
 
