added deployed group project to my portfolio

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 </div>
                 <div class="row">
                     <div class="github-3">
-                        <a href="/" target="_blank">
-                            <img src="/" class="snapshot-3"
-                            alt="blank for now"></a>
+                        <a href="https://github.com/noahsimcoe/Marvel-Uni-Search" target="_blank">
+                            <img src="./images/MUSSnapshot.png" class="snapshot"
+                            alt="snapshot">Marvel Uni Search</a>
                     </div>
                     <div class="github-4">
                         <a href="/" target="_blank">
-                            <img src="/" class="snapshot-4"
+                            <img src="/" class="snapshot"
                             alt="blank for now"></a>
                     </div>
                 </div>
