added link to portfolio page

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                             alt="snapshot">Marvel Uni Search</a>
                     </div>
                     <div class="github-4">
-                        <a href="/" target="_blank">
+                        <a href="https://github.com/Chase-Garrett/dungeonkit" target="_blank">
                             <img src="/" class="snapshot"
-                            alt="blank for now"></a>
+                            alt="blank"></a>
                     </div>
                 </div>
             </div>
